# cgn-ec-consumer

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.test  README.md  app_multi_process.py  app_single_process.py  config.example.json  config.example.yaml  docker-compose.test.yml  pyproject.toml  requirements.txt  test.sh
.github/workflows/: ci.yml  tests.yml
cgn_ec_consumer/: config.py  logger.py
cgn_ec_consumer/crud/: base.py
cgn_ec_consumer/handlers/: __init__.py  a10.py  a10_cef.py  f5.py  generic.py  juniper.py  nfware.py  sixwind.py
cgn_ec_consumer/models/: metrics.py
cgn_ec_consumer/outputs/: __init__.py  amqp.py  base.py  http.py  influx.py  kafka.py  redis.py  timescaledb.py
cgn_ec_consumer/parsers/: base.py  cef.py  regex.py
cgn_ec_consumer/patterns/: a10.py  f5.py  nfware.py  sixwind.py
cgn_ec_consumer/preprocessors/: __init__.py  generic.py
tests/: config.test.json  config.test.yaml  conftest.py  fake_netflow_nfware.py  fake_syslog_a10_thunder_cef.py  fake_syslog_a10thunder.py  fake_syslog_a10thunder_cef.py  fake_syslog_f5_bigip.py  fake_syslog_nfware.py  fake_syslog_sixwind.py  generate_test_data.py  test_a10_thunder_cef.py  test_config.py
tests/data_generators/: nfware.py
tests/handlers/: base.py  test_handlers_syslog_nfware.py
tests/handlers/syslog/: test_handlers_syslog_a10_cef.py  (+4 more)
tests/manual/: get_ips.py
tests/preprocessors/: test_preprocessor_generic_port_block_mapping.py  test_preprocessor_generic_port_mapping.py  test_preprocessors_generic_session_mapping.py  test_processors_generic_address_mapping.py
